Fix wrap around

--- a/assets/stylesheets/messages.scss
+++ b/assets/stylesheets/messages.scss
@@ -91,7 +91,7 @@
 
       .text {
         padding-right: 75px;
-        white-space: pre;
+        white-space: pre-wrap;
       }
 
       img, video {
